# gsoc-participation-2018

./: README.md
_layouts/: default.html
hvac/: Makefile  hvac.json
hvac/app/: HVAC.qml  HeatDegree.qml  Makefile  app.pri  app.pro  main.cpp  moc_predefs.h  moc_translator.cpp  qrc_hvac.cpp  qrc_images.cpp  translations.pri  translator.cpp  translator.h
hvac/app/api/: Binding.qml
hvac/app/config.tests/libhomescreen/: Makefile  libhomescreen  libhomescreen.pro
hvac/app/config.tests/qlibwindowmanager/: Makefile  qlibwindowmanager  qlibwindowmanager.cpp  qlibwindowmanager.pro
hvac/app/translations/: hvac_fr_FR.ts  hvac_ja_JP.ts
hvac/binding/: Makefile  hvac-demo-binding.c  pkg-config_wrapper.sh
hvac/package/: config.xml
task-manager-service-cmake/: CMakeLists.txt  README.md
task-manager-service-cmake/binding/: CMakeLists.txt  task-manager-binding.c
task-manager-service-cmake/conf.d/app-templates/cmake/: common.cmake
task-manager-service-cmake/conf.d/app-templates/cmake/cmake.d/: 01-build_options.cmake
task-manager-service-cmake/conf.d/app-templates/docs/dev_guide/: 1_Quickstart.md  3_advanced_usage.md  4_advanced_customization.md
task-manager-service-cmake/conf.d/app-templates/samples.d/: config.cmake.sample
task-manager-service-cmake/conf.d/cmake/: config.cmake
task-manager-ui/: CMakeLists.txt  README.md
task-manager-ui/afb-helpers/: CMakeLists.txt  afb-helpers-utils.h  curl-wrap.c  curl-wrap.h  escape.c  escape.h  filescan-utils.c  filescan-utils.h  json.md  qafbwebsocketclient.cpp  qafbwebsocketclient.h  qafbwebsocketclient.md  wrap-json.c  wrap-json.test.result
task-manager-ui/app/: CMakeLists.txt  main.cpp  main.qml  procinfo.cpp  procinfo.h  task-manager-ui.pro  taskmanager.cpp  taskmanager.h
task-manager-ui/conf.d/app-templates/: README.md
task-manager-ui/conf.d/app-templates/cmake/cmake.d/: 02-variables.cmake  03-macros.cmake  04-extra_targets.cmake
task-manager-ui/conf.d/app-templates/samples.d/: config.cmake.sample
task-manager-ui/conf.d/app-templates/template.d/: start-on-target.sh.in
task-manager-ui/conf.d/cmake/: config.cmake
task-manager-ui/conf.d/wgt/: config.xml.in
